# MNist

./: .gitignore  .tool-versions  Makefile  README.md  environment.yml  pyproject.toml
text_recognizer/: __init__.py
training/: run_experiment.py
