[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["Sugam <sugams342@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.1.3"
tqdm = "^4.67.0"
toml = "^0.10.2"
editdistance = "^0.8.1"
Flask = "^3.1.0"
boltons = "^24.1.0"
h5py = "^3.12.1"
pytorch-lightning = "^2.4.0"
requests = "^2.32.3"
smart-open = "^7.0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bandit = "^1.7.10"
itermplot = "^0.331"
jupyterlab = "^4.3.1"
matplotlib = "^3.9.2"
mypy = "^1.13.0"
pycodestyle = "^2.12.1"
pydocstyle = "^6.3.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
PyYAML = "^6.0.2"
tornado = "^6.4.1"
safety = "^3.2.11"
scipy = "^1.14.1"
pillow = "^11.0.0"
wandb = "^0.18.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
